--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,9 @@ repositories {
 }
 
 ext {
-    logbackVersion = "1.1.3"
     dbcpVersion = "2.1"
 }
 
 dependencies {
-    compile "ch.qos.logback:logback-classic:$logbackVersion",
-            "org.apache.commons:commons-dbcp2:$dbcpVersion"
+    compile "org.apache.commons:commons-dbcp2:$dbcpVersion"
 }
